# ParafoilSim

./: .gitignore  README.md  pyproject.toml
examples/: public_case.py
src/pimento/: __init__.py  aero.py  atmosphere.py  guidance.py  integrators.py  nine_dof.py  point_mass.py  public_case.py  sizing.py  utils.py
tests/: test_nine_dof.py  test_point_mass.py  test_sizing.py
