[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pimento"
version = "0.1.0"
description = " parafoil preliminary sizing and simulation toolkit"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
